--- a/contracts/04-tamagotchi-shop/Cargo.toml
+++ b/contracts/04-tamagotchi-shop/Cargo.toml
@@ -4,10 +4,11 @@ version.workspace = true
 edition.workspace = true
 publish.workspace = true
 
-# TODO: 1️⃣ Add the `sharded-fungible-token-io` and `store-io` crates as dependencies
 [dependencies]
 gstd.workspace = true
 tamagotchi-shop-io.workspace = true
+sharded-fungible-token-io.workspace = true
+store-io.path.workspace = true
 
 [build-dependencies]
 gear-wasm-builder.workspace = true
